--- a/index.html
+++ b/index.html
@@ -1,80 +1,17 @@
 <!DOCTYPE html>
 <style>
-    .subscribe-button{
-        background-color: rgb(215, 0, 0);
-        color: rgb(255, 255, 255);
-        border: none;
-        height: 34px;
-        width: 110px;
-        border-radius: 2px;
-        cursor: pointer;
-        margin-right: 8px;
-        transition: opacity 0.15s;
-    }
-    .subscribe-button:hover{
-        opacity: 0.7;
-    }
-    .subscribe-button:active{
-        opacity: 0.4;
-    }
-
-    .join-button{
-        background-color: white;
-        color: rgb(41, 118, 211);
-        height: 34px;
-        width: 60px;
-        border-width: 1px;
-        border-color: rgb(54, 102, 246);
-        border-radius: 2px;
-        border-style: solid;
-        cursor: pointer;
-        transition: 
-            background-color 0.3s, 
-            color 0.3s,
-            opacity 0.15s;
-    }
-    .join-button:hover{
-        background-color: rgb(41, 118, 211);
-        color: white;
-    }
-    .join-button:active{
-        opacity: 0.7;
-    }
-
-    .tweet-button{
-        background-color: rgb(29, 161, 242);
-        color: white;
-        height: 34px;
-        width: 70px;
-        border-style: none;
-        border-radius: 18px;
+    .main{
+        color: blue;
+        text-align: center;
+        font-size: 40px;
         font-weight: bold;
-        font-size: 13px;
-        cursor: pointer;
-        margin-left: 8px;
-        transition: 
-            box-shadow 0.2s,
-            color 0.2s,
-            background-color 0.2s;
+        font-family: Arial, Helvetica, sans-serif;
+        vertical-align: middle;
+
     }
-    .tweet-button:hover{
-        box-shadow:0px 2px 10px rgba(0, 0, 0, 0.15);
-    }
-    .tweet-button:active{
-        color: rgb(29, 161, 242);
-        background-color: white;
-        
-    }
+
 </style>
-    
-<button class="subscribe-button">
-     SUBSCRIBE
-</button>
 
-<button class="join-button">
-    JOIN
-</button>
-
-<button class="tweet-button">
-    Tweet
-</button>
+<p class="main">
+    Ginagawa pa ni Gio
+</p>
