--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<style>
-    .main{
-        color: blue;
-        text-align: center;
-        font-size: 40px;
-        font-weight: bold;
-        font-family: Arial, Helvetica, sans-serif;
-        vertical-align: middle;
+<html>
+    <head>
+        <title>Gio's Web lolz</title>
+        <link rel="stylesheet" href="index.css">
 
-    }
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap" rel="stylesheet">
+    </head>
+    
+    <body>
+        <div class="bg-image"></div>
 
-</style>
-
-<p class="main">
-    Ginagawa pa ni Gio
-</p>
+        <div class="head-text">
+            <p>
+                ginagawa pa ni gio &lt;/3
+            </p>
+        </div>
+    </body>
+</html>
